--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -47,8 +47,69 @@
 
         > section:last-child {
             padding: 25px;
+            padding-left: 31px;
             display: flex;
-            height: 500px;
+            min-height: 467px;
+            flex-wrap: wrap;
+
+            > article {
+                height: 200px;
+                width: 200px;
+                position: relative;
+                border-radius: 15px;
+                overflow: hidden;
+                transition: all 0.05s ease-in-out;
+                margin: 18px;
+
+                > img {
+                    height: 200px;
+                    width: 200px;
+                    object-fit: cover;
+                }
+
+                > div {
+                    position: absolute;
+                    top: 0px;
+                    height: 200px;
+                    width: 200px;
+                    background: linear-gradient(
+                        transparent, transparent,
+                        transparent, transparent,
+                        transparent, transparent,
+                        transparent, transparent,
+                        rgba(255, 255, 255, 0.15),
+                        rgba(255,255,255,0.35),
+                        rgba(255,255,255,0.75)
+                    );
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: end;
+
+                    > p {
+                        font-size: 20px;
+                        color: rgb(60, 60, 60);
+                        margin-bottom: 10px;
+                    }
+
+                }
+
+            }
+
+            > article:hover {
+                cursor: pointer;
+                box-shadow: 0px 0px 15px 1px rgb(200, 200, 200);
+
+                > div {
+
+                    > p {
+                        color: #428a13;
+                    }
+
+                }
+
+            }
+
         }
 
     }
