--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -57,13 +57,13 @@
                 width: 200px;
                 position: relative;
                 border-radius: 15px;
-                transition: all 0.05s ease-in-out;
                 margin: 18px;
 
                 > img {
                     height: 200px;
                     width: 200px;
                     object-fit: cover;
+                    border-radius: inherit;
                 }
 
                 > div {
@@ -84,6 +84,7 @@
                     flex-direction: column;
                     align-items: center;
                     justify-content: end;
+                    border-radius: inherit;
 
                     > p {
                         font-size: 20px;
