--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -244,14 +244,20 @@
                 display: flex;
                 flex-direction: column;
 
-                > img {
-                    height: 24px;
-                    width: 32px;
-                }
+                > div {
+                    display: flex;
+                    justify-content: space-between;
 
-                > img:hover {
-                    opacity: 0.7;
-                    cursor: pointer;
+                    > img {
+                        height: 24px;
+                        width: 32px;
+                    }
+
+                    > img:hover {
+                        opacity: 0.7;
+                        cursor: pointer;
+                    }
+
                 }
 
                 > input {
