--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -56,7 +56,7 @@
                 height: 200px;
                 width: 200px;
                 position: relative;
-                border-radius: 15px;
+                border-radius: 20px;
                 margin: 18px;
 
                 > img {
@@ -71,15 +71,16 @@
                     top: 0px;
                     height: 200px;
                     width: 200px;
-                    background: linear-gradient(
-                        transparent, transparent,
-                        transparent, transparent,
-                        transparent, transparent,
-                        transparent, transparent,
-                        rgba(255, 255, 255, 0.15),
-                        rgba(255,255,255,0.35),
-                        rgba(255,255,255,0.75)
-                    );
+                    // background: linear-gradient(
+                    //     transparent, transparent,
+                    //     transparent, transparent,
+                    //     transparent, transparent,
+                    //     transparent,
+                    //     rgba(255, 255, 255, 0.2),
+                    //     rgba(255, 255, 255, 0.4),
+                    //     rgba(255, 255, 255, 0.6),
+                    //     rgba(255, 255, 255, 0.8)
+                    // );
                     display: flex;
                     flex-direction: column;
                     align-items: center;
@@ -88,8 +89,16 @@
 
                     > p {
                         font-size: 20px;
-                        color: rgb(60, 60, 60);
+                        font-weight: bold;
+                        color: #428a13;
                         margin-bottom: 10px;
+                        border-radius: 20px;
+                        background: white;
+                        padding: 2px 10px;
+                        border: 2px solid #428a13;
+                        transition: all 0.2s ease-in-out;
+                        width: 75%;
+                        text-align: center;
                     }
 
                 }
@@ -103,8 +112,9 @@
                 > div {
 
                     > p {
-                        color: #428a13;
-                    }
+                        color: white;
+                        background: #428a13;
+                        border: 2px solid #428a13;                    }
 
                 }
 
