--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -709,5 +709,80 @@
 
     }
 
+    > #lists-trail-form {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.75);
+        position: absolute;
+        left: 0px;
+        z-index: 10;
+
+        > form {
+            background: white;
+            width: 470px;
+            height: 490px;
+            border-radius: 15px;
+            padding: 25px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            > section:first-child {
+
+                > img {
+                    height: 24px;
+                    width: 32px;
+                }
+
+                > img:hover {
+                    opacity: 0.7;
+                    cursor: pointer;
+                }
+
+                > h3 {
+                    font-size: 30px;
+                    font-weight: bold;
+                    margin-top: 24px;
+                }
+
+            }
+
+            > section:last-child {
+
+                > div:last-child {
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: flex-end;
+                    margin-top: 24px;
+                    border-top: 1px solid #e6e6e6;
+                    height: 70px;
+
+                    > button {
+                        border: none;
+                        background: #428a13;
+                        border-radius: 50px;
+                        padding: 10px;
+                        height: 50px;
+                        width: 120px;
+                        font-size: 16px;
+                        font-weight: bold;
+                        color: white;
+                    }
+
+                    > button:hover {
+                        opacity: 0.85;
+                        cursor: pointer;
+                    }
+
+                }
+
+            }
+
+        }
+
+    }
 
 }
