--- a/app/assets/stylesheets/api/trail_page.scss
+++ b/app/assets/stylesheets/api/trail_page.scss
@@ -408,7 +408,9 @@
                                     position: absolute;
                                     opacity: 0;
                                     top: -50px;
-                                    transition: all 0.7s ease-in-out;
+                                    transition:
+                                        opacity 0.7s ease-in-out,
+                                        top 0.7s ease-in-out;
                                     color: red;
                                 }
 
@@ -634,7 +636,7 @@
                     height: auto;
                     width: 300px;
                     padding: 8px;
-                    transition: all 0.1s ease-in-out;
+                    transition: background-color 0.1s ease-in-out;
 
                     > img {
                         width: 100%;
