--- a/app/assets/stylesheets/api/explore.scss
+++ b/app/assets/stylesheets/api/explore.scss
@@ -253,7 +253,7 @@
             align-items: center;
 
             > a {
-                transition: all 0.1s ease-in-out;
+                transition: background-color 0.1s ease-in-out;
                 padding: 15px;
 
                 > img {
