--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -2,7 +2,6 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    // font-family:Verdana, Geneva, Tahoma, sans-serif;
 
     > section:first-child {
         display: flex;
@@ -45,12 +44,11 @@ footer {
         > .social-link-img {
             height: 30px;
             margin: 5px;
-            transition: all 0.05s ease-in-out;
+            transition: transform 0.05s ease-in-out;
         }
 
         > .social-link-img:hover {
             transform: translate(0px, -2px);
-            // opacity: 0.75;
             cursor: pointer;
             filter: invert(25%) sepia(120%) saturate(1000%) hue-rotate(60deg) brightness(120%) contrast(120%);
         }
