--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -34,7 +34,9 @@
                 font-weight: bold;
                 color: white;
                 padding: 8px 14px;
-                transition: all 0.2s ease-in-out;
+                transition:
+                    background-color 0.2s ease-in-out,
+                    color 0.2s ease-in-out;
             }
 
             > button:hover {
@@ -71,16 +73,6 @@
                     top: 0px;
                     height: 200px;
                     width: 200px;
-                    // background: linear-gradient(
-                    //     transparent, transparent,
-                    //     transparent, transparent,
-                    //     transparent, transparent,
-                    //     transparent,
-                    //     rgba(255, 255, 255, 0.2),
-                    //     rgba(255, 255, 255, 0.4),
-                    //     rgba(255, 255, 255, 0.6),
-                    //     rgba(255, 255, 255, 0.8)
-                    // );
                     display: flex;
                     flex-direction: column;
                     align-items: center;
@@ -96,7 +88,9 @@
                         background: white;
                         padding: 2px 10px;
                         border: 2px solid #428a13;
-                        transition: all 0.2s ease-in-out;
+                        transition:
+                            background-color 0.2s ease-in-out,
+                            color 0.2s ease-in-out;
                         width: 75%;
                         text-align: center;
                     }
@@ -114,7 +108,7 @@
                     > p {
                         color: white;
                         background: #428a13;
-                        border: 2px solid #428a13;                    }
+                    }
 
                 }
 
