--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -255,7 +255,7 @@
                     z-index: 1;
 
                     > img:first-child {
-                        height: 32px;
+                        height: 24px;
                         width: 32px;
                         filter: grayscale(1);
                     }
@@ -266,13 +266,15 @@
                     }
 
                     > img:last-child {
-                        height: 26px;
-                        width: 26px;
+                        height: 24px;
+                        width: 24px;
                         filter: grayscale(1);
                     }
 
                     > img:last-child:hover {
                         filter: none;
+                        cursor: pointer;
+                        opacity: 0.7;
                     }
 
                 }
@@ -348,13 +350,14 @@
 
                         > a {
                             font-size: 20px;
+                            color: rgb(70, 70, 70);
                         }
 
                         > a:hover {
                             color:#428a13;
                         }
 
-                        > a:hover ~ img {
+                        > a:hover + img {
                             filter: none;
                         }
 
@@ -362,7 +365,7 @@
                             height: 24px;
                             width: 24px;
                             transition: transform 4s linear;
-                            filter: brightness(0);
+                            filter: grayscale(1);
                         }
 
                         > img:hover {
