Add functionality to delete trails from list only upon save

--- a/app/assets/stylesheets/api/lists.scss
+++ b/app/assets/stylesheets/api/lists.scss
@@ -376,6 +376,10 @@
 
                     }
 
+                    > li.hide {
+                        display: none;
+                    }
+
                 }
 
                 > img {
