Change img paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+
+    <script type="text/javascript">
+      window.menu_bar = "<%= image_url('/header_images/menu_bar.png') %>";
+      window.logo = "<%= image_url('/header_images/logo.png') %>";
+
+    </script>
+
   </head>
 
   <body>
