Change img paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
       images.linkedin = "<%= image_url('/footer_images/linkedin.png') %>";
       images.angellist = "<%= image_url('/footer_images/angellist.png') %>";
       images.portfolio = "<%= image_url('/footer_images/portfolio.png') %>";
+      images.star_icon = "<%= image_url('/home_images/star_icon.png') %>";
+      images.search_icon = "<%= image_url('/home_images/search_icon.png') %>";
+      images.marker_icon = "<%= image_url('/home_images/marker_icon.png') %>";
+
 
     </script>
 
