Change img paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,9 @@
       images.search_icon = "<%= image_url('/home_images/search_icon.png') %>";
       images.marker_icon = "<%= image_url('/home_images/marker_icon.png') %>";
 
+      images.menu_arrow = "<%= image_url('/explore_images/menu_arrow.png') %>";
 
+      images.menu_arrow = "<%= image_url('/lists_images/menu_arrow.png') %>";
     </script>
 
   </head>
