Change img paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,11 @@
 
       images.menu_arrow = "<%= image_url('/explore_images/menu_arrow.png') %>";
 
-      images.menu_arrow = "<%= image_url('/lists_images/menu_arrow.png') %>";
+      images.alltrails_symbol = "<%= image_url("/list_images/alltrails_symbol.png") %>";
+      images.trash_icon = "<%= image_url("/list_images/trash_icon.png") %>";
+      images.add_img_icon = "<%= image_url("/list_images/add_img_icon.png") %>";
+
+      images.x_icon = "<%= image_url("/trail_images/x_icon.png") %>";
     </script>
 
   </head>
