Change img paths

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,24 @@
       images.alltrails_symbol = "<%= image_url("/list_images/alltrails_symbol.png") %>";
       images.trash_icon = "<%= image_url("/list_images/trash_icon.png") %>";
       images.add_img_icon = "<%= image_url("/list_images/add_img_icon.png") %>";
+      images.mini_x_icon = "<%= image_url("/list_images/x_icon.png") %>";
 
       images.x_icon = "<%= image_url("/trail_images/x_icon.png") %>";
+      images.plus_icon = "<%= image_url("/trail_images/plus_icon.png") %>";
+      images.flag_outline = "<%= image_url("/trail_images/flag_outline.png") %>";
+      images.flag_filled = "<%= image_url("/trail_images/flag_filled.png") %>";
+      images.star_filled = "<%= image_url("/trail_images/star_filled.png") %>";
+      images.star_outline = "<%= image_url("/trail_images/star_outline.png") %>";
+
+      images.sunny = "<%= image_url("/trail_images/sunny.jpg") %>";
+      images.partly_cloudy = "<%= image_url("/trail_images/partly_cloudy.jpg") %>";
+      images.cloudy = "<%= image_url("/trail_images/cloudy.jpg") %>";
+      images.overcast = "<%= image_url("/trail_images/overcast.jpg") %>";
+      images.showers = "<%= image_url("/trail_images/showers.jpg") %>";
+      images.rain = "<%= image_url("/trail_images/rain.jpg") %>";
+      images.storm = "<%= image_url("/trail_images/storm.jpg") %>";
+      images.snow = "<%= image_url("/trail_images/snow.jpg") %>";
+      images.fog = "<%= image_url("/trail_images/fog.jpg") %>";
     </script>
 
   </head>
