--- a/app/assets/stylesheets/api/home.scss.erb
+++ b/app/assets/stylesheets/api/home.scss.erb
@@ -13,20 +13,20 @@
         animation: switchImg infinite 60s ease-in-out;
 
         @keyframes switchImg {
-            0% { background-image: url("/home_images/p1.jpg") }
-            10% { background-image: url("/home_images/p1.jpg") }
-            15% { background-image: url("/home_images/s1.jpg") }
-            25% { background-image: url("/home_images/s1.jpg") }
-            30% { background-image: url("/home_images/p2.jpg") }
-            40% { background-image: url("/home_images/p2.jpg") }
-            45% { background-image: url("/home_images/s2.jpg") }
-            55% { background-image: url("/home_images/s2.jpg") }
-            60% { background-image: url("/home_images/p3.jpg") }
-            70% { background-image: url("/home_images/p3.jpg") }
-            75% { background-image: url("/home_images/s3.jpg") }
-            85% { background-image: url("/home_images/s3.jpg") }
-            90% { background-image: url("/home_images/p1.jpg") }
-            100% { background-image: url("/home_images/p1.jpg") }
+            0% { background-image: url("<%= image_url("/home_images/p1.jpg") %>") }
+            10% { background-image: url("<%= image_url("/home_images/p1.jpg") %>") }
+            15% { background-image: url("<%= image_url("/home_images/s1.jpg") %>") }
+            25% { background-image: url("<%= image_url("/home_images/s1.jpg") %>") }
+            30% { background-image: url("<%= image_url("/home_images/p2.jpg") %>") }
+            40% { background-image: url("<%= image_url("/home_images/p2.jpg") %>") }
+            45% { background-image: url("<%= image_url("/home_images/s2.jpg") %>") }
+            55% { background-image: url("<%= image_url("/home_images/s2.jpg") %>") }
+            60% { background-image: url("<%= image_url("/home_images/p3.jpg") %>") }
+            70% { background-image: url("<%= image_url("/home_images/p3.jpg") %>") }
+            75% { background-image: url("<%= image_url("/home_images/s3.jpg") %>") }
+            85% { background-image: url("<%= image_url("/home_images/s3.jpg") %>") }
+            90% { background-image: url("<%= image_url("/home_images/p1.jpg") %>") }
+            100% { background-image: url("<%= image_url("/home_images/p1.jpg") %>") }
         }
 
         > div {
