--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>MyTrails</title>
+    <link rel="icon" type="image/x-icon" href="<%= image_url('/favicon.ico') %>">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
