--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>MyTrails</title>
-    <link rel="icon" type="image/x-icon" href="<%= image_url('/favicon.ico') %>">
+    <%= favicon_link_tag asset_path('alltrails.png') %>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
