Fix bug - image_url broken

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,40 +14,40 @@
 
     <script type="text/javascript">
       window.images = {};
-      images.menu_bar = "<%= image_url('/header_images/menu_bar.png') %>";
-      images.logo = "<%= image_url('/header_images/logo.png') %>";
-      images.developer = "<%= image_url('/footer_images/me.jpg') %>";
-      images.github = "<%= image_url('/footer_images/github.png') %>";
-      images.linkedin = "<%= image_url('/footer_images/linkedin.png') %>";
-      images.angellist = "<%= image_url('/footer_images/angellist.png') %>";
-      images.portfolio = "<%= image_url('/footer_images/portfolio.png') %>";
-      images.star_icon = "<%= image_url('/home_images/star_icon.png') %>";
-      images.search_icon = "<%= image_url('/home_images/search_icon.png') %>";
-      images.marker_icon = "<%= image_url('/home_images/marker_icon.png') %>";
+      images.menu_bar = "<%= asset_path('/header_images/menu_bar.png') %>";
+      images.logo = "<%= asset_path('/header_images/logo.png') %>";
+      images.developer = "<%= asset_path('/footer_images/me.jpg') %>";
+      images.github = "<%= asset_path('/footer_images/github.png') %>";
+      images.linkedin = "<%= asset_path('/footer_images/linkedin.png') %>";
+      images.angellist = "<%= asset_path('/footer_images/angellist.png') %>";
+      images.portfolio = "<%= asset_path('/footer_images/portfolio.png') %>";
+      images.star_icon = "<%= asset_path('/home_images/star_icon.png') %>";
+      images.search_icon = "<%= asset_path('/home_images/search_icon.png') %>";
+      images.marker_icon = "<%= asset_path('/home_images/marker_icon.png') %>";
 
-      images.menu_arrow = "<%= image_url('/explore_images/menu_arrow.png') %>";
+      images.menu_arrow = "<%= asset_path('/explore_images/menu_arrow.png') %>";
 
-      images.alltrails_symbol = "<%= image_url("/list_images/alltrails_symbol.png") %>";
-      images.trash_icon = "<%= image_url("/list_images/trash_icon.png") %>";
-      images.add_img_icon = "<%= image_url("/list_images/add_img_icon.png") %>";
-      images.mini_x_icon = "<%= image_url("/list_images/x_icon.png") %>";
+      images.alltrails_symbol = "<%= asset_path("/list_images/alltrails_symbol.png") %>";
+      images.trash_icon = "<%= asset_path("/list_images/trash_icon.png") %>";
+      images.add_img_icon = "<%= asset_path("/list_images/add_img_icon.png") %>";
+      images.mini_x_icon = "<%= asset_path("/list_images/x_icon.png") %>";
 
-      images.x_icon = "<%= image_url("/trail_images/x_icon.png") %>";
-      images.plus_icon = "<%= image_url("/trail_images/plus_icon.png") %>";
-      images.flag_outline = "<%= image_url("/trail_images/flag_outline.png") %>";
-      images.flag_filled = "<%= image_url("/trail_images/flag_filled.png") %>";
-      images.star_filled = "<%= image_url("/trail_images/star_filled.png") %>";
-      images.star_outline = "<%= image_url("/trail_images/star_outline.png") %>";
+      images.x_icon = "<%= asset_path("/trail_images/x_icon.png") %>";
+      images.plus_icon = "<%= asset_path("/trail_images/plus_icon.png") %>";
+      images.flag_outline = "<%= asset_path("/trail_images/flag_outline.png") %>";
+      images.flag_filled = "<%= asset_path("/trail_images/flag_filled.png") %>";
+      images.star_filled = "<%= asset_path("/trail_images/star_filled.png") %>";
+      images.star_outline = "<%= asset_path("/trail_images/star_outline.png") %>";
 
-      images.sunny = "<%= image_url("/trail_images/sunny.jpg") %>";
-      images.partly_cloudy = "<%= image_url("/trail_images/partly_cloudy.jpg") %>";
-      images.cloudy = "<%= image_url("/trail_images/cloudy.jpg") %>";
-      images.overcast = "<%= image_url("/trail_images/overcast.jpg") %>";
-      images.showers = "<%= image_url("/trail_images/showers.jpg") %>";
-      images.rain = "<%= image_url("/trail_images/rain.jpg") %>";
-      images.storm = "<%= image_url("/trail_images/storm.jpg") %>";
-      images.snow = "<%= image_url("/trail_images/snow.jpg") %>";
-      images.fog = "<%= image_url("/trail_images/fog.jpg") %>";
+      images.sunny = "<%= asset_path("/trail_images/sunny.jpg") %>";
+      images.partly_cloudy = "<%= asset_path("/trail_images/partly_cloudy.jpg") %>";
+      images.cloudy = "<%= asset_path("/trail_images/cloudy.jpg") %>";
+      images.overcast = "<%= asset_path("/trail_images/overcast.jpg") %>";
+      images.showers = "<%= asset_path("/trail_images/showers.jpg") %>";
+      images.rain = "<%= asset_path("/trail_images/rain.jpg") %>";
+      images.storm = "<%= asset_path("/trail_images/storm.jpg") %>";
+      images.snow = "<%= asset_path("/trail_images/snow.jpg") %>";
+      images.fog = "<%= asset_path("/trail_images/fog.jpg") %>";
     </script>
 
   </head>
