--- a/app/assets/stylesheets/api/explore.scss.erb
+++ b/app/assets/stylesheets/api/explore.scss.erb
@@ -43,7 +43,7 @@
 
                 > button {
                     border: none;
-                    background-image: url("/trail_images/search_icon.png");
+                    background-image: url(<%= image_url("trail_images/search_icon.png") %>);
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: 16px 16px;
