--- a/app/assets/stylesheets/api/trail_page.scss.erb
+++ b/app/assets/stylesheets/api/trail_page.scss.erb
@@ -62,7 +62,7 @@
 
                     > button {
                         border: none;
-                        background-image: url("/trail_images/search_icon.png");
+                        background-image: url(<%= image_url("trail_images/search_icon.png") %>);
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: 16px 16px;
