Fix bug - conver to image_url paths

--- a/app/assets/stylesheets/api/session_form.scss.erb
+++ b/app/assets/stylesheets/api/session_form.scss.erb
@@ -104,9 +104,9 @@
 }
 
 .signup-page {
-    background-image: url("/session_images/signup.jpg");
+    background-image: url(<%= image_url("session_images/signup.jpg") %>);
 }
 
 .signin-page {
-    background-image: url("/session_images/signin.jpg");
+    background-image: url(<%= image_url("session_images/signin.jpg") %>);
 }
