--- a/app/assets/stylesheets/api/header.scss.erb
+++ b/app/assets/stylesheets/api/header.scss.erb
@@ -3,13 +3,13 @@ header {
     background-size: 0%;
 
     @keyframes loadImg {
-        0% { background-image: url("/home_images/s1.jpg") }
-        10% { background-image: url("/home_images/p2.jpg") }
-        20% { background-image: url("/home_images/s2.jpg") }
-        30% { background-image: url("/home_images/p3.jpg") }
-        40% { background-image: url("/home_images/s3.jpg") }
-        50% { background-image: url("/session_images/signup.jpg") }
-        60% { background-image: url("/session_images/signin.jpg") }
+        0% { background-image: url(<%= image_url("home_images/s1.jpg") %>) }
+        10% { background-image: url(<%= image_url("home_images/p2.jpg") %>) }
+        20% { background-image: url(<%= image_url("home_images/s2.jpg") %>) }
+        30% { background-image: url(<%= image_url("home_images/p3.jpg") %>) }
+        40% { background-image: url(<%= image_url("home_images/s3.jpg") %>) }
+        50% { background-image: url(<%= image_url("session_images/signup.jpg") %>) }
+        60% { background-image: url(<%= image_url("session_images/signin.jpg") %>) }
         100% { background-image: url("") }
     }
 
